adding observations to Matplotlib challenge

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -14,6 +14,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Observations\n",
+    "- It is clearly evident that Capamouline is working better when compared to other drug regimens in this study except Ramicane.\n",
+    "- Most of the metastatic sites are in Female population\n",
+    "- Ramicane is definitely having better results with the similar kind of sample size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
